--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
+    "@sentry/react": "^8.27.0",
+    "@sentry/vite-plugin": "^2.22.3",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
